rename fonts files names

--- a/_scss/base/_fonts.scss
+++ b/_scss/base/_fonts.scss
@@ -1,9 +1,9 @@
 /* Webfont: Overpass-Bold */
 @font-face {
     font-family: 'GI';
-    src: url($e2path + '/fonts/rv7/gi/G.I.-750.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/gi/G.I.-750.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/gi/G.I.-750.woff2') format('woff2');
+    src: url($e2path + '/fonts/rv7/gi/GI-750.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/gi/GI-750.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/gi/GI-750.woff2') format('woff2');
     font-style: normal;
     font-weight: 700;
     text-rendering: optimizeLegibility;
@@ -12,9 +12,9 @@
 /* Webfont: Overpass-BoldItalic */
 @font-face {
     font-family: 'GI';
-    src: url($e2path + '/fonts/rv7/gi/G.I.-750Italic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/gi/G.I.-750Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/gi/G.I.-750Italic.woff2') format('woff2');
+    src: url($e2path + '/fonts/rv7/gi/GI-750Italic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/gi/GI-750Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/gi/GI-750Italic.woff2') format('woff2');
     font-style: italic;
     font-weight: 700;
     text-rendering: optimizeLegibility;
@@ -23,9 +23,9 @@
 /* Webfont: Overpass-Reg */
 @font-face {
     font-family: 'GI';
-    src: url($e2path + '/fonts/rv7/gi/G.I.-530.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/gi/G.I.-530.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/gi/G.I.-530.woff2') format('woff2');
+    src: url($e2path + '/fonts/rv7/gi/GI-530.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/gi/GI-530.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/gi/GI-530.woff2') format('woff2');
     font-style: normal;
     font-weight: 600;
     text-rendering: optimizeLegibility;
@@ -34,9 +34,9 @@
 /* Webfont: Overpass-Italic */
 @font-face {
     font-family: 'GI';
-    src: url($e2path + '/fonts/rv7/gi/G.I.-530Italic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/gi/G.I.-530Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/gi/G.I.-530Italic.woff2') format('woff2');
+    src: url($e2path + '/fonts/rv7/gi/GI-530Italic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/gi/GI-530Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/gi/GI-530Italic.woff2') format('woff2');
     font-style: italic;
     font-weight: 600;
     text-rendering: optimizeLegibility;
@@ -45,9 +45,9 @@
 /* Webfont: Overpass-Light */
 @font-face {
     font-family: 'GI';
-    src: url($e2path + '/fonts/rv7/gi/G.I.-400.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/gi/G.I.-400.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/gi/G.I.-400.woff2') format('woff2');
+    src: url($e2path + '/fonts/rv7/gi/GI-400.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/gi/GI-400.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/gi/GI-400.woff2') format('woff2');
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -56,9 +56,9 @@
 /* Webfont: Overpass-LightItalic */
 @font-face {
     font-family: 'GI';
-    src: url($e2path + '/fonts/rv7/gi/G.I.-400.talic.woff') format('woff'), /* Modern Browsers */
-         url($e2path + '/fonts/rv7/gi/G.I.-400Italic.ttf') format('truetype'), /* Safari, Android, iOS */
-         url($e2path + '/fonts/rv7/gi/G.I.-400Italic.woff2') format('woff2');
+    src: url($e2path + '/fonts/rv7/gi/GI-400.talic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/gi/GI-400Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/gi/GI-400Italic.woff2') format('woff2');
     font-style: italic;
     font-weight: normal;
     text-rendering: optimizeLegibility;
