updated color pallettes

--- a/_includes/colors.html
+++ b/_includes/colors.html
@@ -6,21 +6,63 @@
                 <h5>PRIMARY</h5>
                 <ul class="color-list">
                     <li>
-                        <div class="color-box white-background"></div>
+                        <div class="color-box white-background">
+                            <p>Army White</p>
+                        </div>
                         <p>#FFFFFF</p>
                     </li>
                     <li>
-                        <div class="color-box gold-background"></div>
-                        <p>#FEC325</p>
+                        <div class="color-box gold-background">
+                            <p>Army Gold</p>
+                        </div>
+                        <p>#FFCC01</p>
                     </li>
                     <li>
-                        <div class="color-box army-black-background"></div>
-                        <p>#231F20</p>
+                        <div class="color-box army-black-background">
+                            <p>Army Black</p>
+                        </div>
+                        <p>#221F20</p>
+                    </li>
+                    <li>
+                        <div class="color-box green-background">
+                            <p>Army Green</p>
+                        </div>
+                        <p>#2F372F</p>
                     </li>
                 </ul>
             </div>
             <div id="accents-colors" class="color-group">
                 <h5>ACCENTS</h5>
+                <ul class="color-list">
+                    <li>
+                        <div class="color-box field01-background">
+                        </div>
+                        <p>#727365<span class="grey50"></span></p>
+                    </li>
+                    <li>
+                        <div class="color-box field02-background">
+                        </div>
+                        <p>#BFB8A6<span class="grey50"></span></p>
+                    </li>
+                    <li>
+                        <div class="color-box tan-background">
+                        </div>
+                        <p>#F1E4C7<span class="grey50"></span></p>
+                    </li>
+                    <li>
+                        <div class="color-box gray01-background">
+                        </div>
+                        <p>#565557<span class="grey50"></span></p>
+                    </li>
+                    <li>
+                        <div class="color-box gray02-background">
+                        </div>
+                        <p>#D5D5D7<span class="grey50"></span></p>
+                    </li>
+                </ul>
+            </div>
+            <div id="accents-colors" class="color-group">
+                <h5>GREYSCALE ACCENTS</h5>
                 <ul class="color-list">
                     <li>
                         <div class="color-box black-background"></div>
