--- a/_scss/base/_colors.scss
+++ b/_scss/base/_colors.scss
@@ -9,9 +9,18 @@
 
 $army-branding: (
     black: #030000,
-    armyblack: #231F20,
-    gold: #fec325,
+    armyblack: #221F20,
+    gold: #ffcc01,
     white: #ffffff,
+    green: #2F372F,
+    field01: #727365,
+    field02: #bfb8a6,
+    tan: #f1e4c7,
+    gray01: #565557,
+    gray02: #d5d5d7,
+);
+
+$greyscale-accents: (
     grey90: #1a1a1a,
     grey80: #333333,
     grey70: #4c4c4c,
