--- a/_scss/base/_variables.scss
+++ b/_scss/base/_variables.scss
@@ -16,7 +16,7 @@ $screen-lg-md: 1600px;
 // ----------------------------------------------------------------------
 // Font Families
 // ----------------------------------------------------------------------
-$font-family: "GI";
+$font-family: "GI",Overpass,sans-serif;
 
 // ----------------------------------------------------------------------
 // Grid
