--- a/_scss/elements/_photo-slideshow.scss
+++ b/_scss/elements/_photo-slideshow.scss
@@ -74,7 +74,7 @@
         display: block;
         
         .caption-text {
-          border-top: 1px solid map-get($army-branding, grey20);
+          border-top: 1px solid map-get($greyscale-accents, grey20);
           display: block;
           margin: 10px 0 0;
           padding: 10px 0 0;
