--- a/_scss/base/_fonts.scss
+++ b/_scss/base/_fonts.scss
@@ -1,4 +1,9 @@
-/* Webfont: Overpass-Bold */
+/* 
+GI Font (Default)
+https://github.com/RedHatBrand/overpass 
+*/
+
+/* Webfont: GI Bold */
 @font-face {
     font-family: 'GI';
     src: url($e2path + '/fonts/rv7/gi/GI-750.woff') format('woff'), /* Modern Browsers */
@@ -9,7 +14,7 @@
     text-rendering: optimizeLegibility;
 }
 
-/* Webfont: Overpass-BoldItalic */
+/* Webfont: GI Bold Italic */
 @font-face {
     font-family: 'GI';
     src: url($e2path + '/fonts/rv7/gi/GI-750Italic.woff') format('woff'), /* Modern Browsers */
@@ -20,7 +25,7 @@
     text-rendering: optimizeLegibility;
 }
 
-/* Webfont: Overpass-Reg */
+/* Webfont: GI Regular */
 @font-face {
     font-family: 'GI';
     src: url($e2path + '/fonts/rv7/gi/GI-530.woff') format('woff'), /* Modern Browsers */
@@ -31,7 +36,7 @@
     text-rendering: optimizeLegibility;
 }
 
-/* Webfont: Overpass-Italic */
+/* Webfont: GI Italic */
 @font-face {
     font-family: 'GI';
     src: url($e2path + '/fonts/rv7/gi/GI-530Italic.woff') format('woff'), /* Modern Browsers */
@@ -42,7 +47,7 @@
     text-rendering: optimizeLegibility;
 }
 
-/* Webfont: Overpass-Light */
+/* Webfont: GI Light */
 @font-face {
     font-family: 'GI';
     src: url($e2path + '/fonts/rv7/gi/GI-400.woff') format('woff'), /* Modern Browsers */
@@ -53,7 +58,7 @@
     text-rendering: optimizeLegibility;
 }
 
-/* Webfont: Overpass-LightItalic */
+/* Webfont: GI Light Italic */
 @font-face {
     font-family: 'GI';
     src: url($e2path + '/fonts/rv7/gi/GI-400.talic.woff') format('woff'), /* Modern Browsers */
@@ -61,5 +66,98 @@
          url($e2path + '/fonts/rv7/gi/GI-400Italic.woff2') format('woff2');
     font-style: italic;
     font-weight: normal;
+    text-rendering: optimizeLegibility;
+}
+
+/* 
+Overpass
+https://github.com/RedHatBrand/overpass 
+*/
+
+/* Webfont: Overpass-Bold */
+@font-face {
+    font-family: 'Overpass';
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-Bold.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Bold.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Bold.svg#Overpass-Bold') format('svg'); /* Legacy iOS */
+    font-style: normal;
+    font-weight: 700;
+    text-rendering: optimizeLegibility;
+}
+
+/* Webfont: Overpass-BoldItalic */
+@font-face {
+    font-family: 'Overpass';
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Bold-Italic.svg#Overpass-BoldItalic') format('svg'); /* Legacy iOS */
+    font-style: italic;
+    font-weight: 700;
+    text-rendering: optimizeLegibility;
+}
+
+/* Webfont: Overpass-Reg */
+@font-face {
+    font-family: 'Overpass';
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-Regular.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Regular.svg#Overpass-Regular') format('svg'); /* Legacy iOS */
+    font-style: normal;
+    font-weight: 600;
+    text-rendering: optimizeLegibility;
+}
+
+/* Webfont: Overpass-Italic */
+@font-face {
+    font-family: 'Overpass';
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-Italic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Italic.svg#Overpass-Italic') format('svg'); /* Legacy iOS */
+    font-style: italic;
+    font-weight: 600;
+    text-rendering: optimizeLegibility;
+}
+
+/* Webfont: Overpass-Light */
+@font-face {
+    font-family: 'Overpass';
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-Light.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Light.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Light.svg#Overpass-Light') format('svg'); /* Legacy iOS */
+    font-style: normal;
+    font-weight: normal;
+    text-rendering: optimizeLegibility;
+}
+
+/* Webfont: Overpass-LightItalic */
+@font-face {
+    font-family: 'Overpass';
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-Light-Italic.svg#Overpass-LightItalic') format('svg'); /* Legacy iOS */
+    font-style: italic;
+    font-weight: normal;
+    text-rendering: optimizeLegibility;
+}
+
+/* Webfont: Overpass-ExtraLight */
+@font-face {
+    font-family: 'Overpass';
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight.svg#Overpass-ExtraLight') format('svg'); /* Legacy iOS */
+    font-style: normal;
+    font-weight: 300;
+    text-rendering: optimizeLegibility;
+}
+
+/* Webfont: Overpass-ExtraLightItalic */
+@font-face {
+    font-family: 'Overpass';
+    src: url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.woff') format('woff'), /* Modern Browsers */
+         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+         url($e2path + '/fonts/rv7/overpass/Overpass-ExtraLight-Italic.svg#Overpass-ExtraLightItalic') format('svg'); /* Legacy iOS */
+    font-style: italic;
+    font-weight: 300;
     text-rendering: optimizeLegibility;
 }
