--- a/_scss/base/_helper-classes.scss
+++ b/_scss/base/_helper-classes.scss
@@ -29,8 +29,39 @@
   background-color: map-get($army-branding, gold);
 }
 
+.green-background {
+  background-color: map-get($army-branding, green);
+  color: map-get($army-branding, gold);
+}
+
+.field01-background {
+  background-color: map-get($army-branding, field01);
+  color: map-get($army-branding, white);
+}
+
+.field02-background {
+  background-color: map-get($army-branding, field02);
+  color: map-get($army-branding, armyblack);
+}
+
+.tan-background {
+  background-color: map-get($army-branding, tan);
+  color: map-get($army-branding, armyblack);
+}
+
+.gray01-background {
+  background-color: map-get($army-branding, gray01);
+  color: map-get($army-branding, white);
+}
+
+.gray02-background {
+  background-color: map-get($army-branding, gray02);
+  color: map-get($army-branding, armyblack);
+}
+
 .army-black-background {
   background-color: map-get($army-branding, armyblack);
+  color: map-get($army-branding, gold);
 }
 
 //accent colors
@@ -39,39 +70,39 @@
 }
 
 .grey90 {
-  color: map-get($army-branding, grey90);
+  color: map-get($greyscale-accents, grey90);
 }
 
 .grey80 {
-  color: map-get($army-branding, grey80);
+  color: map-get($greyscale-accents, grey80);
 }
 
 .grey70 {
-  color: map-get($army-branding, grey70);
+  color: map-get($greyscale-accents, grey70);
 }
 
 .grey60 {
-  color: map-get($army-branding, grey60);
+  color: map-get($greyscale-accents, grey60);
 }
 
 .grey50 {
-  color: map-get($army-branding, grey50);
+  color: map-get($greyscale-accents, grey50);
 }
 
 .grey40 {
-  color: map-get($army-branding, grey40);
+  color: map-get($greyscale-accents, grey40);
 }
 
 .grey30 {
-  color: map-get($army-branding, grey30);
+  color: map-get($greyscale-accents, grey30);
 }
 
 .grey20 {
-  color: map-get($army-branding, grey20);
+  color: map-get($greyscale-accents, grey20);
 }
 
 .grey10 {
-  color: map-get($army-branding, grey10);
+  color: map-get($greyscale-accents, grey10);
 }
 
 .black-background {
@@ -79,39 +110,39 @@
 }
 
 .grey90-background {
-  background-color: map-get($army-branding, grey90);
+  background-color: map-get($greyscale-accents, grey90);
 }
 
 .grey80-background {
-  background-color: map-get($army-branding, grey80);
+  background-color: map-get($greyscale-accents, grey80);
 }
 
 .grey70-background {
-  background-color: map-get($army-branding, grey70);
+  background-color: map-get($greyscale-accents, grey70);
 }
 
 .grey60-background {
-  background-color: map-get($army-branding, grey60);
+  background-color: map-get($greyscale-accents, grey60);
 }
 
 .grey50-background {
-  background-color: map-get($army-branding, grey50);
+  background-color: map-get($greyscale-accents, grey50);
 }
 
 .grey40-background {
-  background-color: map-get($army-branding, grey40);
+  background-color: map-get($greyscale-accents, grey40);
 }
 
 .grey30-background {
-  background-color: map-get($army-branding, grey30);
+  background-color: map-get($greyscale-accents, grey30);
 }
 
 .grey20-background {
-  background-color: map-get($army-branding, grey20);
+  background-color: map-get($greyscale-accents, grey20);
 }
 
 .grey10-background {
-  background-color: map-get($army-branding, grey10);
+  background-color: map-get($greyscale-accents, grey10);
 }
 
 //generic helper classes
