--- a/_scss/elements/_leaders.scss
+++ b/_scss/elements/_leaders.scss
@@ -1,6 +1,6 @@
 .leaders {
   li {
-    border: 2px solid map-get($army-branding, grey50);
+    border: 2px solid map-get($greyscale-accents, grey50);
     margin: 0 0 30px;
     overflow: hidden;
     position: relative;
