revert color variables changes

--- a/_scss/base/_colors.scss
+++ b/_scss/base/_colors.scss
@@ -20,7 +20,7 @@ $army-branding: (
     gray02: #d5d5d7,
 );
 
-$greyscale-accents: (
+$army-branding: (
     grey90: #1a1a1a,
     grey80: #333333,
     grey70: #4c4c4c,
