--- a/_scss/base/_helper-classes.scss
+++ b/_scss/base/_helper-classes.scss
@@ -70,39 +70,39 @@
 }
 
 .grey90 {
-  color: map-get($greyscale-accents, grey90);
+  color: map-get($army-branding, grey90);
 }
 
 .grey80 {
-  color: map-get($greyscale-accents, grey80);
+  color: map-get($army-branding, grey80);
 }
 
 .grey70 {
-  color: map-get($greyscale-accents, grey70);
+  color: map-get($army-branding, grey70);
 }
 
 .grey60 {
-  color: map-get($greyscale-accents, grey60);
+  color: map-get($army-branding, grey60);
 }
 
 .grey50 {
-  color: map-get($greyscale-accents, grey50);
+  color: map-get($army-branding, grey50);
 }
 
 .grey40 {
-  color: map-get($greyscale-accents, grey40);
+  color: map-get($army-branding, grey40);
 }
 
 .grey30 {
-  color: map-get($greyscale-accents, grey30);
+  color: map-get($army-branding, grey30);
 }
 
 .grey20 {
-  color: map-get($greyscale-accents, grey20);
+  color: map-get($army-branding, grey20);
 }
 
 .grey10 {
-  color: map-get($greyscale-accents, grey10);
+  color: map-get($army-branding, grey10);
 }
 
 .black-background {
@@ -110,39 +110,39 @@
 }
 
 .grey90-background {
-  background-color: map-get($greyscale-accents, grey90);
+  background-color: map-get($army-branding, grey90);
 }
 
 .grey80-background {
-  background-color: map-get($greyscale-accents, grey80);
+  background-color: map-get($army-branding, grey80);
 }
 
 .grey70-background {
-  background-color: map-get($greyscale-accents, grey70);
+  background-color: map-get($army-branding, grey70);
 }
 
 .grey60-background {
-  background-color: map-get($greyscale-accents, grey60);
+  background-color: map-get($army-branding, grey60);
 }
 
 .grey50-background {
-  background-color: map-get($greyscale-accents, grey50);
+  background-color: map-get($army-branding, grey50);
 }
 
 .grey40-background {
-  background-color: map-get($greyscale-accents, grey40);
+  background-color: map-get($army-branding, grey40);
 }
 
 .grey30-background {
-  background-color: map-get($greyscale-accents, grey30);
+  background-color: map-get($army-branding, grey30);
 }
 
 .grey20-background {
-  background-color: map-get($greyscale-accents, grey20);
+  background-color: map-get($army-branding, grey20);
 }
 
 .grey10-background {
-  background-color: map-get($greyscale-accents, grey10);
+  background-color: map-get($army-branding, grey10);
 }
 
 //generic helper classes
