--- a/_scss/elements/_top-button.scss
+++ b/_scss/elements/_top-button.scss
@@ -1,7 +1,7 @@
 
 
 .top-btn {
-  background: map-get($greyscale-accents, grey40);
+  background: map-get($army-branding, grey40);
   border-radius: 50%;
   bottom: 30px;
   font-size: 0;
