--- a/_scss/base/_bodytext.scss
+++ b/_scss/base/_bodytext.scss
@@ -11,7 +11,7 @@
     text-decoration: none;
     font-weight: normal;
     color: $input-focus;
-    border-bottom: 1px solid map-get($greyscale-accents, grey20);
+    border-bottom: 1px solid map-get($army-branding, grey20);
     &:hover,
     &:focus {
       text-decoration: none;
@@ -66,7 +66,7 @@
     font-style: italic;
     font-size: 1.25em;
     line-height: 1.625;
-    color: map-get($greyscale-accents, grey50);
+    color: map-get($army-branding, grey50);
     &:before, &:after {
       display: none;
     }
