--- a/_scss/elements/_headlines.scss
+++ b/_scss/elements/_headlines.scss
@@ -10,7 +10,7 @@
       &:last-child { border: 0; margin: 0; padding: 0; }
       
       .date {
-        color: map-get($greyscale-accents, grey50);
+        color: map-get($army-branding, grey50);
         padding-right: 15px;
         text-transform: uppercase;
       }
@@ -76,7 +76,7 @@
   
   @include breakpoints(mobile nav) {
     ul li {
-      border-bottom: 1px solid map-get($greyscale-accents, grey20);
+      border-bottom: 1px solid map-get($army-branding, grey20);
       padding-bottom: 20px;
       
       .date {
