make armyblack the default black used on most elements

--- a/_scss/base/_defaults.scss
+++ b/_scss/base/_defaults.scss
@@ -1,5 +1,6 @@
 body {
   font: normal 1em/1.625 $font-family;
+  color: map-get($army-branding, armyblack);
 }
 
 %h1 {
@@ -118,7 +119,7 @@ p {
 }
 
 a {
-  color: #000;
+  color: map-get($army-branding, armyblack);
   font-weight: 600;
   text-decoration: none;
   
