--- a/_scss/base/_colors.scss
+++ b/_scss/base/_colors.scss
@@ -47,7 +47,7 @@ $social-branding: (
 // ----------------------------------------------------------------------
 // Colors 
 // ----------------------------------------------------------------------
-$primary-text-color: #000;
+$primary-text-color: map-get($army-branding, armyblack);
 $secondary-background-color: #231F20;
 $secondary-text-color: #FFF;
 $secondary-border-color: #57584f;
