--- a/_scss/elements/_accordion.scss
+++ b/_scss/elements/_accordion.scss
@@ -69,7 +69,7 @@
           width: 34px;
           
           &:before, &:after {
-            background: map-get($army-branding, black);
+            background: map-get($army-branding, armyblack);
             content: '';
             position: absolute;
             @include custom-transition(transform .25s ease);
