--- a/_scss/elements/_footer.scss
+++ b/_scss/elements/_footer.scss
@@ -17,7 +17,7 @@
 }
 
 footer {
-  background: map-get($army-branding, black);
+  background: map-get($army-branding, armyblack);
   bottom: 0;
   left: 0;
   padding: 60px 0;
