--- a/e2/css/rv7/upgrade/style.scss
+++ b/e2/css/rv7/upgrade/style.scss
@@ -97,7 +97,7 @@ body {
 
 .navbar {
   .navbar-container {
-    background-color: #000;
+    background-color: map-get($army-branding, armyblack);
     height: 60px;
     border-bottom: 8px solid #fec325;
   }
@@ -115,7 +115,7 @@ body {
   }
 
   .nav-army-star {
-    background-color: #000;
+    background-color: map-get($army-branding, armyblack);
     border-radius: 10px;
     display: block;
     left: 50%;
