update header styles and new logo

--- a/_scss/base/_variables.scss
+++ b/_scss/base/_variables.scss
@@ -36,5 +36,6 @@ $container-sm: 670px;
 // ----------------------------------------------------------------------
 // Images 
 // ----------------------------------------------------------------------
+$army-logo: url($e2path + "/images/rv7/universal/army_logo_horizontal.svg");
 $social-button-sprite: url($e2path + "/images/rv7/mobile_redesign_sprite_icons_v3.svg");
 $standto-image: url($e2path + "/images/rv7/stand_to_mosaic.jpg");
