change font-weight naming to fit on single line (normal, medium, bold)

--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -21,37 +21,37 @@
                     <div class="span6 lg md2 md1 sm-nav sm"><p class="large">Font Size &amp; Weight</p></div>
                 <li>
                     <div class="span5"><h1>H1.Article title</h1></div>
-                    <div class="span7 lg grey50"><h1>Bold (530), 48px</h1></div>
-                    <div class="span7 md2 grey50"><h1>Bold (530), 40px</h1></div>
-                    <div class="md1 grey50"><p>Bold (530), 40px</p></div>
-                    <p class="sm-md grey50">Bold (530), 36px</p>
-                    <p class="sm grey50">Bold (530), 30px</p>
+                    <div class="span7 lg grey50"><h1>Medium (530), 48px</h1></div>
+                    <div class="span7 md2 grey50"><h1>Medium (530), 40px</h1></div>
+                    <div class="md1 grey50"><p>Medium (530), 40px</p></div>
+                    <p class="sm-md grey50">Medium (530), 36px</p>
+                    <p class="sm grey50">Medium (530), 30px</p>
                 </li>
                 <li>
-                    <div class="span6"><h2>H2.PAGE TITLE</h2></div>
-                    <div class="span6 lg grey50"><h2>Extra Bold (700), 40px</h2></div>
-                    <div class="span6 md2 grey50"><h2>Extra Bold (700), 36px</h2></div>
-                    <div class="md1 grey50"><p>Extra Bold (700), 36px</p></div>
-                    <p class="sm-nav grey50">Extra Bold (700), 30px</p>
+                    <div class="span5"><h2>H2.PAGE TITLE</h2></div>
+                    <div class="span7 lg grey50"><h2>Bold (700), 40px</h2></div>
+                    <div class="span7 md2 grey50"><h2>Bold (700), 36px</h2></div>
+                    <div class="md1 grey50"><p>Bold (700), 36px</p></div>
+                    <p class="sm-nav grey50">Bold (700), 30px</p>
                 </li>
                 <li>
                     <div class="span6"><h3>H3.PAGE TITLE</h3></div>
-                    <div class="span6 lg grey50"><h3>Extra Bold (700), 36px</h3></div>
-                    <div class="span6 md2 grey50"><h3>Extra Bold (700), 30px</h3></div>
-                    <div class="md1 grey50"><p>Extra Bold (700), 30px</p></div>
-                    <p class="sm-nav grey50">Extra Bold (700), 24px</p>
+                    <div class="span6 lg grey50"><h3>Bold (700), 36px</h3></div>
+                    <div class="span6 md2 grey50"><h3>Bold (700), 30px</h3></div>
+                    <div class="md1 grey50"><p>Bold (700), 30px</p></div>
+                    <p class="sm-nav grey50">Bold (700), 24px</p>
                 </li>
                 <li>
                     <div class="span6"><h4>H4.SECTION HEADER</h4></div>
-                    <div class="span6 md2 lg grey50"><h4>Extra Bold (700), 24px</h4></div>
-                    <div class="md1 grey50"><p>Extra Bold (700), 24px</p></div>
-                    <p class="sm-nav grey50">Extra Bold (700), 21px</p>
+                    <div class="span6 md2 lg grey50"><h4>Bold (700), 24px</h4></div>
+                    <div class="md1 grey50"><p>Bold (700), 24px</p></div>
+                    <p class="sm-nav grey50">Bold (700), 21px</p>
                 </li>
                 <li>
                     <div class="span6"><h5>H5.SUB-SECTION HEADER</h5></div>
-                    <div class="span6 lg md2 grey50"><h5>Extra Bold (700), 18px</h5></div>
-                    <div class="md1 grey50"><p>Extra Bold (700), 18px</p></div>
-                    <p class="sm-nav grey50">Extra Bold (700), 16px</p>
+                    <div class="span6 lg md2 grey50"><h5>Bold (700), 18px</h5></div>
+                    <div class="md1 grey50"><p>Bold (700), 18px</p></div>
+                    <p class="sm-nav grey50">Bold (700), 16px</p>
                 </li>
                 <li>
                     <p class="span6">Body Text</p>
