make the GI font optional using a class, instead of set directly on the body element

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/e2/css/rv7/armydotmil/style.css" type="text/css" media="screen">
 </head>
-<body>
+<body class="army-font">
     {% include elements/upgrade.html %}
     {% include elements/header.html %}
     <div class="main" role="main">
