--- a/_layouts/upgrade.html
+++ b/_layouts/upgrade.html
@@ -12,7 +12,7 @@
     </style>
     <![endif]-->
 </head>
-<body id="{{ page.active }}" class="{{ page.id }}">
+<body id="{{ page.active }}" class="army-font {{ page.id }}">
     <header>
         <div class="navbar">
           <div class="navbar-container">
