--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/e2/css/rv7/armydotmil/guide.css" type="text/css" media="screen">
 </head>
-<body>
+<body class="army-font">
     {% include elements/upgrade.html %}
     {% include elements/header.html %}
     <div class="main" role="main">
