fix typo in GI400 Italic font file

--- a/_scss/base/_fonts.scss
+++ b/_scss/base/_fonts.scss
@@ -61,7 +61,7 @@ https://github.com/RedHatBrand/overpass
 /* Webfont: GI Light Italic */
 @font-face {
     font-family: 'GI';
-    src: url($e2path + '/fonts/rv7/gi/GI-400.talic.woff') format('woff'), /* Modern Browsers */
+    src: url($e2path + '/fonts/rv7/gi/GI-400Italic.woff') format('woff'), /* Modern Browsers */
          url($e2path + '/fonts/rv7/gi/GI-400Italic.ttf') format('truetype'), /* Safari, Android, iOS */
          url($e2path + '/fonts/rv7/gi/GI-400Italic.woff2') format('woff2');
     font-style: italic;
