apply the GI font to the header/footer directly, to ensure it is used in those places consistently

--- a/_scss/elements/_header.scss
+++ b/_scss/elements/_header.scss
@@ -63,6 +63,7 @@ header {
 }
 
 header {
+  font-family: $font-family;
   height: $header-height + $header-border-width;
   left: 0;
   position: relative;
